--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "framer-motion": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "swiper": "^9.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
